Re-instate and fix gradle/maven test for async data mongo
These were skipped over a year ago, and we missed re-instating them.

Fixed for micronaut 4, and re-enabled them.

For the nativeTest, we need to clear down the database after each test.

This is because mongo isn't cleaned up by MicronautTest, and effectively nativeTest
runs the test twice against the same database started by test-resources